--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
+    "swiper": "^8.4.5",
     "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
