--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "package-update": "ncu --interactive --format group"
   },
   "dependencies": {
+    "@formspree/react": "^2.4.1",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
