--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
+    "react-tabs": "^6.0.0",
     "swiper": "^8.4.5",
     "typewriter-effect": "^2.19.0"
   },
